Stop images from overflowing on smaller screense

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -13,6 +13,10 @@ body {
     --graph-muted: var(--text-muted);
 }
 
+img {
+    max-width: 100%;
+}
+
 .content {
     max-width: 700px;
     margin: auto;
